// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SummaryViewModel Check answers (0 items) should use correct summary labels 1`] = `
[
  {
    "label": "Pizza",
    "name": "pizza",
    "title": "Pizza",
    "value": "",
  },
  {
    "label": "How would you like to receive your pizza?",
    "name": "orderType",
    "title": "How you would like to receive your pizza",
    "value": "Collection",
  },
]
`;

exports[`SummaryViewModel Check answers (1 item) should use correct summary labels 1`] = `
[
  {
    "label": "Pizza",
    "name": "pizza",
    "title": "Pizza",
    "value": "You have added 1 answer",
  },
  {
    "label": "How would you like to receive your pizza?",
    "name": "orderType",
    "title": "How you would like to receive your pizza",
    "value": "Delivery",
  },
]
`;

exports[`SummaryViewModel Check answers (2 items) should use correct summary labels 1`] = `
[
  {
    "label": "Pizza",
    "name": "pizza",
    "title": "Pizza",
    "value": "You have added 2 answers",
  },
  {
    "label": "How would you like to receive your pizza?",
    "name": "orderType",
    "title": "How you would like to receive your pizza",
    "value": "Delivery",
  },
]
`;
